# xBounty-sc

./: .gitignore  Cargo.toml  README.md
interactor/: Cargo.toml  state.toml
interactor/src/: interact.rs  interactor_main.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
src/: events.rs  storage.rs  x_bounty.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
