[package]
name = "x_bounty"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["costin.carabas@gmail.com"]

[lib]
path = "src/x_bounty.rs"

[dependencies.multiversx-sc]
version = "0.54.6"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
